[package]
name = "hashing-reader"
description = "A std::io::Read and tokio::io::AsyncRead wrapper that calculates checksum on the fly"
repository = "https://github.com/cisco-open/hashing-reader-rs"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Nikolay Denev <ndenev@cisco.com>"]


[dependencies]
digest = "0.10"
tokio = { version = "1", optional = true }
pin-project = { version = "1.1" }

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
criterion = { version = "0.5", features = [
    "html_reports",
    "async_tokio",
    "async_futures",
] }

[[bench]]
name = "benchmark"
harness = false
